deployment/iqgeo-platform-centrifugo-admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iqgeo-centrifugo-admin
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    cert-manager.io/issuer-kind: ClusterIssuer
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - centrifugo-customer.example.com
      secretName: centrifugo-customer.example.com.tls-secret
  rules:
    - host: centrifugo-customer.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iqgeo-centrifugo
                port:
                  number: 9000
